--- a/Angular5/1/my-first-app/src/app/app.component.html
+++ b/Angular5/1/my-first-app/src/app/app.component.html
@@ -1,2 +1,7 @@
 <input type="text" [(ngModel)]="name"/>
-<p>{{name}}</p>
+<p>{{name}}</p> <br/>
+
+<h3>I am in AppCompontent </h3>
+<br/>
+<hr>
+<app-servers></app-servers>
