--- a/Angular5/1/my-first-app/src/app/app.component.html
+++ b/Angular5/1/my-first-app/src/app/app.component.html
@@ -1,7 +1,12 @@
-<input type="text" [(ngModel)]="name"/>
-<p>{{name}}</p> <br/>
+<div class="container">
+<div class="row">
+    <div class="col-xs-12">
+        <h3>I am in AppCompontent </h3>
+        <br/>
+        <hr>
+        <app-servers></app-servers>
+    </div>
+</div>
 
-<h3>I am in AppCompontent </h3>
-<br/>
-<hr>
-<app-servers></app-servers>
+</div>
+
