--- a/Angular5/1/my-first-app/src/app/servers/servers.component.html
+++ b/Angular5/1/my-first-app/src/app/servers/servers.component.html
@@ -1,3 +1,8 @@
-<button class="btn btn-primary">Add Sever</button>
+<button class="btn btn-primary"
+[disabled]="!allowsNewServer"
+(click)="onCreateSever()">Add Sever</button>
+<p>{{allowsNewServer}}</p>
+<p [innerText]="allowsNewServer"></p>
+<p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
