--- a/Angular5/1/my-first-app/src/app/servers/servers.component.html
+++ b/Angular5/1/my-first-app/src/app/servers/servers.component.html
@@ -16,7 +16,7 @@
 <p [innerText]="allowsNewServer"></p>
 <p>{{serverCreationStatus}}</p>
 
-<p *ngIf="serverCreated">Server was created and Server name is {{serverName}}</p>
-
+<p *ngIf="serverCreated; else noServer">Server was created and Server name is {{serverName}}</p>
+<ng-template #noServer><p>No Server was Created test</p></ng-template>
 <app-server></app-server>
 <app-server></app-server>
