--- a/Angular5/3/databinding/src/app/app.component.html
+++ b/Angular5/3/databinding/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 <app-cockpit (serverCreated)="onServerAdded($event)"
-(bluePrintCreated) = "onBluePrintAdded($event)"></app-cockpit>
+(bpCreated) = "onBluePrintAdded($event)"></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
