--- a/Angular5/5/directives-start/src/app/app.component.html
+++ b/Angular5/5/directives-start/src/app/app.component.html
@@ -30,9 +30,11 @@
         
        
       </ul>
+
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
+      <p appBasicHighlight>Style me with Basic Directive</p>
     </div>
   </div>
 </div>
