--- a/Angular5/5/directives-start/src/app/app.component.html
+++ b/Angular5/5/directives-start/src/app/app.component.html
@@ -35,6 +35,8 @@
         <p>Only odd</p>
       </ng-template>
       <p appBasicHighlight>Style me with Basic Directive</p>
+      <p appBetterHighlight>Style me with Better Directive</p>
+
     </div>
   </div>
 </div>
