--- a/Angular5/5/directives-start/src/app/app.component.html
+++ b/Angular5/5/directives-start/src/app/app.component.html
@@ -6,7 +6,7 @@
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group">
-        <div *ngIf="onlyOdd">
+        <!--div *ngIf="onlyOdd">
             <li
             class="list-group-item"
             [ngClass]="{odd: odd % 2 !== 0}"
@@ -26,8 +26,18 @@
             *ngFor="let even of evenNumbers">
             {{even }}
           </li>
-        </div>
-        
+        </div-->
+        <div *appUnless="onlyOdd">
+          <li
+          class="list-group-item"
+          [ngClass]="{odd: even % 2 !== 0}"
+          [ngStyle] = "{backgroundColor: even % 2 !== 0? 'yellow' : 'transparent' }"
+
+          *ngFor="let even of evenNumbers">
+          {{even }}
+        </li>
+      </div>
+      
        
       </ul>
 
