--- a/3_Angular_Project/1_password_generator/pw/src/app/app.component.html
+++ b/3_Angular_Project/1_password_generator/pw/src/app/app.component.html
@@ -17,7 +17,7 @@
   </div>
 
   <div>
-<button>Generate!</button>
+<button (click)="onButtonClick()">Generate!</button>
 </div>
 <div>
   <label>Your Password</label>
