--- a/3_Angular_Project/1_password_generator/pw/src/app/app.component.html
+++ b/3_Angular_Project/1_password_generator/pw/src/app/app.component.html
@@ -5,7 +5,7 @@
 </div>
   <div>
     <label>Use Letter</label>
-    <input type="checkbox"/>
+    <input (change)="onChangeUseLetters()" type="checkbox"/>
   </div>
   <div>
     <label>Use Numbers</label>
