--- a/3_Angular_Project/1_password_generator/pw/src/app/app.component.html
+++ b/3_Angular_Project/1_password_generator/pw/src/app/app.component.html
@@ -9,11 +9,11 @@
   </div>
   <div>
     <label>Use Numbers</label>
-    <input type="checkbox"/>
+    <input  (change)="onChangeUseNumbers()" type="checkbox"/>
   </div>
   <div>
     <label>Use Symbol</label>
-    <input type="checkbox"/>
+    <input  (change)="onChangeUseSymbols()" type="checkbox"/>
   </div>
 
   <div>
