--- a/3_Angular_Project/1_password_generator/pw/src/app/app.component.html
+++ b/3_Angular_Project/1_password_generator/pw/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Password Generator</h1>
 <div>
 <label>Enter Length</label>
-<input (input)="onChangeLength($event.target.value)"/>
+<input #todo  (input)="onChangeLength(todo.value)"/>
 </div>
   <div>
     <label>Use Letter</label>
@@ -17,7 +17,7 @@
   </div>
 
   <div>
-<button (click)="onButtonClick()">Generate!</button>
+<button [disabled]="!(length && (includeLetters || includeNumbers || includeSymbols))"  (click)="onButtonClick()">Generate!</button>
 </div>
 <div>
   <label>Your Password</label>
