--- a/3_Angular_Project/2_cards/cards/src/app/app.component.html
+++ b/3_Angular_Project/2_cards/cards/src/app/app.component.html
@@ -1,6 +1,12 @@
 
-<app-card></app-card>
-<app-card></app-card>
-<app-card></app-card>
-<app-card></app-card>
+<app-card
+ [title] = "post[0].title"
+ [imageUrl] = "post[0].title"
+ [username] = "post[0].username"
+ [content] = "post[0].content"
+
+></app-card>
+<app-card  [title] = "post[1].title"></app-card>
+<app-card  [title] = "post[2].title"></app-card>
+ 
 
