--- a/3_Angular_Project/3_typing/typing/src/app/app.component.html
+++ b/3_Angular_Project/3_typing/typing/src/app/app.component.html
@@ -5,7 +5,7 @@
       <h1 class="title has-text-centered">Typing Challenge</h1>
 
       <p class="has-text-centered">
-        Randomly generated text should go here
+        {{ randomText }}
       </p>
 
       <div class="field">
