--- a/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
+++ b/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
@@ -23,7 +23,7 @@
     <div class="col">
         <label><b>Date</b></label>
         <div>
-            {{date | titlecase}}
+            {{date | date: 'MMMM d, y ' }}
         </div>
     </div>
 </div>
