--- a/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
+++ b/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
@@ -28,4 +28,21 @@
     </div>
 </div>
 
+
+
+<div class="row">
+    <div class="form-group col"> 
+        <label>Payment Amount</label>
+        <input  class="form-control" (input)="onAmountChange($event.target.value)"/>
+    </div>
+    <div class="col">
+        <label><b>Payment Amount</b></label>
+        <div>
+            {{amount | currency:'KRW' }}
+        </div>
+    </div>
+</div>
+
+
+
 </div>
