--- a/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
+++ b/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
@@ -56,4 +56,18 @@
     </div>
 </div>
 
+
+<div class="row">
+    <div class="form-group col"> 
+        <label>Miles</label>
+        <input  class="form-control" (input)="onMilesChange($event.target.value)"/>
+    </div>
+    <div class="col">
+        <label><b>Kilometer</b></label>
+        <div>
+            {{miles |convert  }}
+        </div>
+    </div>
+</div>
+
 </div>
