--- a/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
+++ b/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
@@ -64,8 +64,8 @@
     </div>
     <div class="col">
         <label><b>Kilometer</b></label>
-        <div>
-            {{miles |convert  }}
+        <div *ngIf="(miles | convert:'km')  > 10">
+            {{miles |convert:'km'  }}
         </div>
     </div>
 </div>
