--- a/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
+++ b/3_Angular_Project/4_pipes/pipes/src/app/app.component.html
@@ -65,7 +65,7 @@
     <div class="col">
         <label><b>Kilometer</b></label>
         <div *ngIf="(miles | convert:'km')  > 10">
-            {{miles |convert:'km'  }}
+            {{miles |convert:'cm' | number: '1.0-2'  }}
         </div>
     </div>
 </div>
