--- a/3_Angular_Project/5_directive/pages/src/app/app.component.html
+++ b/3_Angular_Project/5_directive/pages/src/app/app.component.html
@@ -21,7 +21,7 @@
   </ul>
 </nav>
 <div>
-  <h4 appClass [backgroundColor]="'red'">{{ images[currentPage].title }}</h4>
+  <h4 appClass [appClass]="'red'">{{ images[currentPage].title }}</h4>
   <img [src]="images[currentPage].url" />
 </div>
 
