--- a/3_Angular_Project/7_Routing_Navigation/Routing_Navigation/src/app/app.component.html
+++ b/3_Angular_Project/7_Routing_Navigation/Routing_Navigation/src/app/app.component.html
@@ -1,3 +1,3 @@
-<a routerLink="/Element">Element</a> <br/>
+<a routerLink="/elements">Element</a> <br/>
 <a routerLink="/collections">Collection</a>
 <router-outlet></router-outlet>
