--- a/3_Angular_Project/7_Routing_Navigation/Routing_Navigation/src/app/app.component.html
+++ b/3_Angular_Project/7_Routing_Navigation/Routing_Navigation/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="ui container">
     <div class="ui secondary pointing menu">
-        <a routerLink="/elements" class="item">Element</a> <br/>
-        <a routerLink="/collections" class="item">Collection</a>
+        <a routerLink="/elements"  routerLinkActive="active" class="item">Element</a> <br/>
+        <a routerLink="/collections" routerLinkActive="active" class="item">Collection</a>
     </div>
     <div class="ui segment">
 
