--- a/3_Angular_Project/8_Lazing_loading_With_Module/Lazing_loading_Module/src/app/elements/elements-home/elements-home.component.html
+++ b/3_Angular_Project/8_Lazing_loading_With_Module/Lazing_loading_Module/src/app/elements/elements-home/elements-home.component.html
@@ -1,4 +1,2 @@
-
-<h1>Place Holder</h1>
-<div class="ui divider"></div>
+<app-divider></app-divider>
 <app-placeholder [header]="true" [lines]="10"></app-placeholder>
