--- a/3_Angular_Project/8_Lazing_loading_With_Module/Lazing_loading_Module/src/app/elements/elements-home/elements-home.component.html
+++ b/3_Angular_Project/8_Lazing_loading_With_Module/Lazing_loading_Module/src/app/elements/elements-home/elements-home.component.html
@@ -1,2 +1,4 @@
-<app-divider >Place Holder Components</app-divider>
+<app-divider>Place Holder Components</app-divider>
 <app-placeholder [header]="true" [lines]="10"></app-placeholder>
+<app-divider>Segment Components</app-divider>
+<app-segment></app-segment>
