--- a/3_Angular_Project/8_Lazing_loading_With_Module/Lazing_loading_Module/src/app/elements/elements-home/elements-home.component.html
+++ b/3_Angular_Project/8_Lazing_loading_With_Module/Lazing_loading_Module/src/app/elements/elements-home/elements-home.component.html
@@ -1,4 +1,22 @@
 <app-divider>Place Holder Components</app-divider>
 <app-placeholder [header]="true" [lines]="10"></app-placeholder>
 <app-divider>Segment Components</app-divider>
-<app-segment></app-segment>
+<app-segment>
+    <header>
+        <i class="pdf file outline icon"></i>
+        No documents are listed for this customer.
+    </header>
+        <button class="ui primary button">
+            Add Document
+        </button>
+</app-segment>
+
+<app-segment>
+    <header>
+        <i class="add icon"></i>
+         Add Resource
+    </header>
+        <button class="ui primary button">
+            Click to Document
+        </button>
+</app-segment>
