--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/collections/collections-home/collections-home.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/collections/collections-home/collections-home.component.html
@@ -6,9 +6,9 @@
 <div class="ui grid">
     <div class="four wide column">
         <div class="ui vertical fluid tabular menu">
-            <a  class="item" routerLink=""  routerLinkActive="active">Biography</a> <br/>
-            <a class="item" routerLink="/companies" routerLinkActive="companies">Companies</a>
-            <a class="item" routerLink="/partners" routerLinkActive="partners">Partners</a>
+            <a  class="item" routerLink="./"  routerLinkActive="active">Biography</a> <br/>
+            <a class="item" routerLink="./companies" routerLinkActive="companies">Companies</a>
+            <a class="item" routerLink="./partners" routerLinkActive="partners">Partners</a>
 
         </div>
 
