--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/collections/tabs/tabs.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/collections/tabs/tabs.component.html
@@ -1,13 +1,8 @@
+
 <div class="ui grid">
     <div class="four wide column">
       <div class="ui vertical fluid tabular menu">
-        <a class="item" routerLink="./" routerLinkActive="active">Biography</a>
-        <a class="item" routerLink="./companies" routerLinkActive="active"
-          >Companies</a
-        >
-        <a class="item" routerLink="./partners" routerLinkActive="active"
-          >Partners</a
-        >
+        <ng-content></ng-content>
       </div>
     </div>
     <div class="twelve wide stretched column">
@@ -16,3 +11,4 @@
       </div>
     </div>
   </div>
+  
