--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/collections/collections-home/collections-home.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/collections/collections-home/collections-home.component.html
@@ -5,10 +5,7 @@
 <app-divider>Tab Menu</app-divider>
 <app-tabs>
     <a class="item" routerLink="./" routerLinkActive="active">Biography</a>
-    <a class="item" routerLink="./companies" routerLinkActive="active"
-      >Companies</a
-    >
-    <a class="item" routerLink="./partners" routerLinkActive="active"
-      >Partners</a
-    >
+    <a class="item" routerLink="./companies" routerLinkActive="active">Companies</a>
+    <a class="item" routerLink="./partners" routerLinkActive="active">Partners</a>
+   
 </app-tabs>
