--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/app.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/app.component.html
@@ -3,6 +3,8 @@
         <a routerLink="/elements"  routerLinkActive="active" class="item">Element</a> <br/>
         <a routerLink="/collections" routerLinkActive="active" class="item">Collection</a>
         <a class="item" routerLink="/views" routerLinkActive="active">Views</a>
+        <a class="item" routerLink="/mods" routerLinkActive="active">Module</a>
+
     </div>
     <div class="ui segment">
         <router-outlet></router-outlet>
