--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/mods-home/mods-home.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/mods-home/mods-home.component.html
@@ -1,2 +1,3 @@
 <app-divider></app-divider>
-<app-modal></app-modal>
+<button (click)="onClick()">Button</button>
+<app-modal *ngIf="modalOpen"></app-modal>
