--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/modal/modal.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/modal/modal.component.html
@@ -1,18 +1,18 @@
 
 <div (click)="onCloseClick()" class="ui dimmer visible active">
-    <div (click)="$event.stopPropagation()" class="ui modal visible active">
-      <i (click)="onCloseClick()"  class="close icon"></i>
-      <div class="header">
-        MODAL!
-      </div>
-      <div class="content">
-        <p>
-          Some content for the modal window should go right here!
-        </p>
-      </div>
-      <div class="actions">
-        <button (click)="onCloseClick()"  class="ui button">OK</button>
-      </div>
+  <div (click)="$event.stopPropagation()" class="ui modal visible active">
+    <i (click)="onCloseClick()" class="close icon"></i>
+    <div class="header">
+      <ng-content select="[modalTitle]"></ng-content>
+    </div>
+    <div class="content">
+      <ng-content></ng-content>
+    </div>
+    <div class="actions actions-default">
+      <button (click)="onCloseClick()" class="ui button">OK</button>
+    </div>
+    <div class="actions">
+      <ng-content select="[modalFooter]"></ng-content>
     </div>
   </div>
-  
+</div>
