--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/mods-home/mods-home.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/mods-home/mods-home.component.html
@@ -10,3 +10,5 @@
     <button class="ui button" (click)="onClick()">CLOSE ME!</button>
   </ng-container>
 </app-modal>
+<app-divider>Accordion Component</app-divider>
+<app-accordion></app-accordion>
