--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/accordion/accordion.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/accordion/accordion.component.html
@@ -1,1 +1,14 @@
-<p>accordion works!</p>
+<div class="ui accordion styled">
+    <ng-container *ngFor="let item of items">
+        <div class="title">
+          <i class="dropdown icon">
+              {{item.title}}
+          </i>
+        </div>
+        <div class="content active">
+            <p>
+                {{item.content}}
+            </p>
+          </div>
+    </ng-container>
+</div>
