--- a/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/accordion/accordion.component.html
+++ b/3_Angular_Project/9_Advancement_Compotent_Routing/src/app/mods/accordion/accordion.component.html
@@ -1,11 +1,11 @@
 <div class="ui accordion styled">
-    <ng-container *ngFor="let item of items">
-        <div class="title">
+    <ng-container *ngFor="let item of items; let i = index">
+        <div class="title"  [ngClass]="{active: i == openedItemIndex}"  (click)="onClick(i)">
           <i class="dropdown icon">
               {{item.title}}
           </i>
         </div>
-        <div class="content active">
+        <div [ngClass]="{active: i == openedItemIndex}"  class="content">
             <p>
                 {{item.content}}
             </p>
